<resources>
    <string name="app_name">社区O2O</string>
    <string name="msg_success_del">删除成功</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="hint_name">请输入收货人姓名</string>
    <string name="hint_detail">请输入门牌号</string>
    <string name="msg_error">查询失败，请重试</string>
    <string name="msg_no_search">很抱歉,没有索到您的信息</string>
    <string name="err_map_info">获取地址信息失败</string>
    <string name="install_map_app">请先安装地图APP</string>
    <string name="get_password">找回密码</string>
    <string name="label_empty_password">密码不能为空</string>
    <string name="switch_addr">切换地址</string>
    <string name="before_price">￥</string>
    <string name="price_yuan">￥%1$s元</string>
    <string name="count_arg">共%1$s件</string>
    <string name="before_price_test">&#165;32.00</string>
    <string name="user_edit_title">个人资料</string>
    <string name="msg_no_update">请修改后保存</string>
    <string name="msg_error_network">网络连接失败</string>
    <string name="msg_loading_save">保存中...</string>
    <string name="msg_failed_update">保存失败</string>
    <string name="msg_failed_add">添加失败</string>
    <string name="msg_success_save">保存成功</string>
    <string name="msg_failed_update_success">提交成功</string>
    <string name="addr_reciver">收货人:</string>
    <string name="addr_reciver_hint">请输入收货人姓名</string>
    <string name="addr_mobile">电&#160;&#160;&#160;&#160;话:</string>
    <string name="addr_mobile_hint">请输入收货人电话</string>
    <string name="addr_address">地&#160;&#160;&#160;&#160;址:</string>
    <string name="addr_address_hint1">选择地址区域</string>
    <string name="address_add_hint">请输入地址</string>
    <string name="addr_address_hint2">输入楼号门牌号等详细信息</string>
    <string name="address_position">定位地址</string>
    <string name="choose_addr_hint">请输入小区名</string>
    <string name="hint_keyword">请输入关键字</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索商家/\商品</string>
    <string name="add_address">新增收货地址</string>
    <string name="choose_address">选择地址</string>
    <string name="choose_address_succeed">选择地址成功</string>
    <string name="addr_delete_msg_success">删除成功</string>
    <string name="addr_delete_msg_error">获取信息失败，请重新获取</string>
    <string name="edit_addr">编辑地址</string>
    <string name="product_detail">商品详情</string>
    <string name="pro_detail">商家详情</string>
    <string name="search_business">搜索结果</string>
    <string name="business_close">商家休息</string>
    <string name="business_distribution_time_arg">配送时间：%1$s</string>
    <string name="hint_password">请输入密码</string>
    <string name="regist_pwd_hint">6-14位,建议数字/字母/符号组合</string>
    <string name="regist_argument_end">《用户注册协议》</string>
    <string name="regist_argument_start">阅读并接受%1$s</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="label_forget_password">忘记密码？</string>
    <string name="label_phone_login">手机快捷登录</string>
    <string name="login">登录</string>
    <string name="sure">确定</string>
    <string name="add">新增</string>
    <string name="regist">注册</string>
    <string name="about_us">关于我们</string>
    <string name="my_collection">我的收藏(%1$s)</string>
    <string name="my_collection_title">我的收藏</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_error_one">该商家或商品不存在</string>
    <string name="collection_error_two">已收藏过</string>
    <string name="collection_delete_error">取消收藏失败</string>
    <string name="collection_delete_success">已取消收藏</string>
    <string name="addr_management">地址管理(%1$s)</string>
    <string name="addr_management_title">地址管理</string>
    <string name="service_msg">系统消息(%1$s)</string>
    <string name="service_msg_title">系统消息</string>
    <string name="login_normal">普通登录</string>
    <string name="login_quick_sms">短信快捷登录</string>
    <string name="title_phone_login">快捷登录</string>
    <string name="title_pwd_login">密码登录</string>
    <string name="label_legal_mobile">请输入合法的手机号码</string>
    <string name="label_legal_mobile_null">手机号码不能为空</string>
    <string name="label_six_twenty_identify">请输入6-20位密码</string>
    <string name="msg_loading_login">正在登录\u2026</string>
    <string name="label_loging_success">登录成功</string>
    <string name="lable_no_get_identifying">未收到验证码，请联系客服？</string>
    <string name="login_protocol_pink">《免责声明》</string>
    <string name="feed_back">意见反馈</string>
    <string name="new_help">新手帮助</string>
    <string name="head">头&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;像</string>
    <string name="staff_name">会员名称</string>
    <string name="staff_mobile">手机号码</string>
    <string name="staff_tel">服务电话</string>
    <string name="staff_pwd">会员密码</string>
    <string name="version_detection">版本检测</string>
    <string name="login_protocol">点击登陆，即表示您同意%1$s</string>
    <string name="label_send_success">发送成功</string>
    <string name="label_empty_identify">验证码不能为空</string>
    <string name="label_six_identify">请输入6位验证码</string>
    <string name="label_no_match">密码前后输入不一致，请检查后重新输入</string>
    <string name="label_changedpassword_success">修改密码成功</string>
    <string name="hint_password_new_ok">请确认密码</string>
    <string name="input_password_new_ok">请确认新密码</string>
    <string name="change">修改</string>
    <string name="retry">重试</string>
    <string name="label_change_fail">修改密码失败，请稍后重试</string>
    <string name="label_regist_fail">注册失败，请稍后重试</string>
    <string name="label_change_password">修改密码</string>
    <string name="label_identifying_code">请输入验证码</string>
    <string name="lable_get_identifying">获取验证码</string>
    <string name="label_login_fail">登录失败，请稍后重试</string>
    <string name="label_check_mobile">网络未连接，请检查设备</string>
    <string name="msg_loading">正在加载中\u2026</string>
    <string name="label_empty_mobile">手机号码不能为空</string>
    <string name="err_bad_mobile">无效的手机号码</string>
    <string name="set_up">设置</string>
    <string name="join_business">我要开店</string>
    <string name="share_friend">邀请好友</string>
    <string name="user_guard">物业</string>
    <string name="upgrade_now">马上升级</string>
    <string name="upgrade_ignore">忽略更新</string>
    <string name="msg_success_version_last">恭喜您使用的是最新版</string>
    <string name="opinion_hint">请输入您的宝贵意见，我们会更加完善的...</string>
    <string name="opinion_comfimation">提交意见</string>
    <string name="opinion">意见反馈</string>
    <string name="opinion_edi_text">意见不能为空</string>
    <string name="opinion_finsh">反馈成功</string>
    <string name="upgrade">版本升级</string>
    <string name="share_content_arg">我在使用%1$sApp，可以在上面预约商品送货上门和预约上门服务，邀请你来试试。下载地址%2$s</string>
    <string name="msg_tip_logout">确定退出当前账号？</string>
    <string name="msg_success_logout">退出登录成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="next_step">下一步</string>
    <string name="business_classification">商家分类</string>
    <string name="msg_top_delete">删除商品</string>
    <string name="msg_tip_delete">狠心丢下我吗？</string>
    <string name="home_recomment_goods">生活小助手</string>
    <string name="home_recomment_shops">附近推荐商户</string>
    <string name="home_more">更多》</string>
    <string name="main_sel_location">选择地址</string>
    <string name="home_notice_sel_location">请先选择地址</string>
    <string name="home_seller_business_time">营业时间：</string>
    <string name="home_text">首页</string>
    <string name="shop_cart_text">购物车</string>
    <string name="msg_err_shopcart_not_null">购物车为空！！</string>
    <string name="msg_err_not_delete">无法删除</string>
    <string name="order_text">订单</string>
    <string name="my_text">我的</string>
    <string name="title_activity_order_verify">订单确认</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="order_d_sn">订单编号：</string>
    <string name="order_sn_arg">订单编号：%1$s</string>
    <string name="order_d_deliver_way">配送方式：</string>
    <string name="order_d_deliver_man">配送员：</string>
    <string name="order_d_deliver_time">配送时间：</string>
    <string name="order_d_service_time">服务时间：</string>
    <string name="order_d_remark">备注：</string>
    <string name="order_d_pay_all">共需支付：</string>
    <string name="order_d_pay_remaind">可用余额：</string>
    <string name="order_d_pay_need">金额：</string>
    <string name="order_d_vantages">积分：</string>
    <string name="order_d_coupon">优惠卷：</string>
    <string name="order_d_carriage">配送费：</string>
    <string name="order_d_total">合计：</string>
    <string name="order_d_pay_way">支付方式：</string>
    <string name="order_d_goods_price">商品价格：</string>
    <string name="order_d_goods_info">商品信息：</string>
    <string name="order_d_refund_info">退款信息</string>
    <string name="order_d_refund_money">退款金额：</string>
    <string name="order_d_refund_reason">退款原因：</string>
    <string name="order_d_refund_time">退款时间：</string>
    <string name="order_d_cancel_want">不想买了</string>
    <string name="order_d_cancel_bad">拍错了</string>
    <string name="order_d_cancel_reason">取消原因</string>
    <string name="order_d_cancel_order"><u>取消订单</u></string>
    <string name="order_head_deliver_way">配送方式</string>
    <string name="order_head_other">其他</string>
    <string name="order_head_balance">结算</string>
    <string name="footer_loading">加载中...</string>
    <string name="footer_load_end">没有更多</string>
    <string name="loading_err_net">网络连接失败</string>
    <string name="loading_err_nor">加载失败</string>
    <string name="loading_err_update">更新失败</string>
    <string name="loading_err_upload">上传失败</string>
    <string name="loading_err_init">加载系统信息失败</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading">加载中...</string>
    <string name="msg_error_load_data">加载数据失败</string>
    <string name="hint_error_load_data">数据加载失败</string>
    <string name="hint_shake_open_door">您可以摇一摇直接开门</string>
    <string name="err_bad_param">参数无效</string>
    <string name="err_sel_norms">请选择规格</string>
    <string name="err_sel_goods">请选择商品</string>
    <string name="err_not_open">暂未开通</string>
    <string name="msg_error_location">定位失败</string>
    <string name="msg_success_location">定位成功</string>
    <string name="msg_location">定位中...</string>
    <string name="logout">注销</string>
    <string name="msg_not_login">您还没有登录!</string>
    <string name="msg_register_succ">注册成功!</string>
    <string name="order_car_total">合计：</string>
    <string name="order_total_price">合计：</string>
    <string name="order_car_balance">去结算</string>
    <string name="order_select_ok">选好了</string>
    <string name="order_not_include_fright">（不含运费）</string>
    <string name="order_car_base_servicefee">还差¥%1$s起送</string>
    <string name="order_car_empty">购物车空空如也</string>
    <string name="distance_unknown">未知</string>
    <string name="good_norms">规格</string>
    <string name="good_buy_nums">购买数量</string>
    <string name="good_stock_nums">库存%1$d件</string>
    <string name="msg_select_goods">您还没有选择商品</string>
    <string name="msg_select_goods_nomore">您选择商品没有达到起送条件</string>
    <string name="btn_add_cart">加入购物车</string>
    <string name="btn_immediately_buy">立即购买</string>
    <string name="sort_all">综合排序</string>
    <string name="sort_sale">销量最高</string>
    <string name="sort_price_dis">起送价最低</string>
    <string name="sort_distance">距离最近</string>
    <string name="sort_eva">评分最高</string>
    <string name="msg_go_pay">去支付</string>
    <string name="msg_business_delivery">商家配送</string>
    <string name="msg_is_greeting_card">是否需要贺卡</string>
    <string name="msg_plase_fill_out_card">请填写货卡内容</string>
    <string name="msg_is_need_invoice">是否需要发票</string>
    <string name="msg_plase_fill_out_invoice_header">请填写发票抬头</string>
    <string name="msg_plase_fill_out_remark_hint">请填写备注信息</string>
    <string name="msg_plase_complete_pay">请在下单后15分钟内完成支付</string>
    <string name="msg_due_money">应付款</string>
    <string name="hint_input_old_pwd">请输入原始密码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_input_new_pwd2">请再次输入新密码</string>
    <string name="hint_pwd_limit">密码长度6-20位，建议数字、字母、符号组合</string>
</resources>