<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_background">

    <EditText
    android:id="@+id/fg_login_mobile"
    style="@style/EditTextStyle"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:layout_marginTop="@dimen/margin_large"
    android:drawableLeft="@drawable/ic_mobile"
    android:drawablePadding="@dimen/margin_small"
    android:hint="@string/hint_mobile"
    android:inputType="phone"
    android:imeOptions="actionGo"
    android:imeActionLabel="@string/login"
    android:maxLength="11" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin" >

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/fg_login_code_edit"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:hint="@string/label_identifying_code"
            android:inputType="number"
            android:maxLength="6"
            android:imeOptions="actionGo"
            android:paddingLeft="@dimen/margin_small"
            android:singleLine="true"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/fg_login_get_code"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:background="@drawable/corners_theme_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/lable_get_identifying"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <EditText
        android:id="@+id/fg_new_pwd"
        style="@style/EditTextStyle"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin_large"
        android:drawableLeft="@drawable/ic_pwd"
        android:drawablePadding="@dimen/margin_small"
        android:hint="@string/input_new_password"
        android:inputType="phone"
        android:imeOptions="actionGo"
        android:imeActionLabel="@string/login"
        android:maxLength="11" />

    <Button
        android:id="@+id/fg_sure"
        style="@style/ButtonStyle"
        android:text="@string/sure"/>

</LinearLayout>
