<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_selector"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_zonghe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/sort_all"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E9E7E8" />

    <TextView
        android:id="@+id/tv_xiaoliang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/sort_sale"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E9E7E8" />

    <TextView
        android:id="@+id/tv_qisong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/sort_price_dis"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E9E7E8" />

    <TextView
        android:id="@+id/sort_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/sort_distance"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E9E7E8" />

    <TextView
        android:id="@+id/sort_eva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/sort_eva"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

</LinearLayout>
